Initial regeneration